@@ -5,6 +5,9 @@ ikiwiki (3.20130519) UNRELEASED; urgency=low
   * comments: The formats allowed to be used in comments can be configured
     using comments_allowformats.
     Thanks, Michal Sojka
+  * calendar: When there are multiple pages for a given day, they're
+    displayed in a popup on mouseover.
+    Thanks, Louis
 
  -- Joey Hess <joeyh@debian.org>  Sun, 23 Jun 2013 14:02:01 -0400
 
